# jas497_476

./: Build.sh  CMakeLists.txt  README.md  detection.object.ros.ork  package.xml  run.sh  test.sh
baxter_launch/: baxter_beer.world  coke_world.launch
launch/: coke_grabber.launch  remap_for_ork.launch  test.launch
models/coke_can/: model-1_4.sdf  model.config
models/foogrip/: foogrip.sdf  model.config
src/: main.cpp  main.hpp
worlds/: tester.world
