<?xml version="1.0"?>
<package>
  <name>jas497_476</name>
  <version>0.0.1</version>
  <description>The 476 package</description>
  
  <maintainer email="jas497@case.edu">jas497</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to GAZEBO_PLUGIN_PATH
         and GAZEBO_MODEL_PATH when you do this export inside the package.xml
         file.  You can then use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.."
		gazebo_media_path="${prefix}"
		/>
  </export>
</package>
